# fleet-protocol

./: .gitignore  CMakeLists.txt  CarStateProtocol.proto  IndustrialPortalProtocol.proto  README.md
doc/img/: FleetProtocolImg.drawio
examples/: CMakeLists.txt
examples/protobuf_parsing_example/: .gitignore  CMLibStorage.cmake  CMakeLists.txt  ModuleMaintainer.cpp  ModuleMaintainer.hpp  ProtobufHelper.cpp  ProtobufHelper.h  ProtocolMaintainer.cpp  ProtocolMaintainer.hpp  README.md  main.cpp
examples/protobuf_parsing_example/cmake/: Dependencies.cmake
examples/protobuf_parsing_example/include/: ModuleMaintainer.hpp  ProtocolMaintainer.hpp
examples/protobuf_parsing_example/lib/protobuf/: ExampleModule.pb.cc  ExampleModule.proto  ProtobufModule.pb.cc  ProtobufModule.pb.h
examples/protobuf_parsing_example/proto_compiled/: ExternalProtocol.pb.cc  ExternalProtocol.pb.h  InternalProtocol.pb.cc  InternalProtocol.pb.h
examples/protobuf_parsing_example/proto_compiled/modules/: ActionModule.pb.cc  ActionModule.pb.h  CarAccessoryModule.pb.cc  CarAccessoryModule.pb.h  ExampleModule.pb.cc  ExampleModule.pb.h  MissionModule.pb.cc  MissionModule.pb.h
examples/protobuf_parsing_example/source/: ModuleMaintainer.cpp  ProtocolMaintainer.cpp
examples/protobuff_parsing_example/: CMakeLists.txt  ProtobufHelper.cpp  ProtobufHelper.h  README.md  main.cpp
lib/: CMakeLists.txt
lib/cloud_api/include/: external_server_api.h  external_server_interface.h
lib/common_headers/: CMakeLists.txt
lib/common_headers/include/: device_management.h  general_error_codes.h  memory_management.h
lib/common_headers/include/fleet_protocol/common_headers/: device_management.h  memory_management.h
lib/internal_client/: CMakeLists.txt
lib/internal_client/include/: ic_error_codes.h  internal_client.h
lib/internal_client/include/fleet_protocol/internal_client/: error_codes.h  internal_client.h
lib/module_api/: CMakeLists.txt  main.c
lib/module_api/include/_internal_client/: module_client.h
lib/module_api/include/_internal_server/: command_manager.h  error_aggregator.h  status_aggregator.h
lib/module_api/include/common/: device_management.h  general_error_codes.h  memory_management.h
lib/module_api/include/internal_client/: internal_client.h
lib/module_api/include/internal_server/: command_manager.h  error_aggregator.h  status_aggregator.h
lib/module_api/include/module_client/: module_client.h
lib/module_api/include/module_server/: command_manager.h
lib/module_api/source/module_client/: internal_client.c  module_client.c
lib/module_gateway/: CMakeLists.txt
lib/module_gateway/include/: command_manager.h  error_aggregator.h  mg_error_codes.h  status_aggregator.h
lib/module_gateway/include/fleet_protocol/module_gateway/: command_manager.h  error_aggregator.h  error_codes.h  status_aggregator.h
lib/module_maintainer/: CMakeLists.txt
lib/module_maintainer/external_server/: CMakeLists.txt
lib/module_maintainer/external_server/include/: external_server_interface.h  external_server_structures.h  structures.h
lib/module_maintainer/external_server/include/fleet_protocol/module_maintainer/external_server/: external_server_interface.h  external_server_structures.h
lib/module_maintainer/module_gateway/: CMakeLists.txt
lib/module_maintainer/module_gateway/include/: module_manager.h
lib/module_maintainer/module_gateway/include/fleet_protocol/module_maintainer/module_gateway/: module_manager.h
protobuf/: CMakeLists.txt  ExternalProtocol.proto  FleetProtocol.proto  InternalProtocol.proto  README.md  externalProtocol.proto  internalProtocol.proto
protobuf/cmake/: Dependencies.cmake
protobuf/compiled/c/: ExternalProtocol.pbobjc.h  ExternalProtocol.pbobjc.m  InternalProtocol.pbobjc.h  InternalProtocol.pbobjc.m
protobuf/compiled/c/modules/: ActionModule.pbobjc.h  ActionModule.pbobjc.m  CarAccessoryModule.pbobjc.h  CarAccessoryModule.pbobjc.m  ExampleModule.pbobjc.h  ExampleModule.pbobjc.m  MissionModule.pbobjc.h  MissionModule.pbobjc.m
protobuf/compiled/cpp/: ExternalProtocol.pb.cc  ExternalProtocol.pb.h  InternalProtocol.pb.cc  InternalProtocol.pb.h
protobuf/compiled/cpp/include/: ExternalProtocol.pb.h  InternalProtocol.pb.h
protobuf/compiled/cpp/modules/: ActionModule.pb.cc  ActionModule.pb.h  CarAccessoryModule.pb.cc  CarAccessoryModule.pb.h  ExampleModule.pb.cc  ExampleModule.pb.h  MissionModule.pb.cc  MissionModule.pb.h
protobuf/compiled/cpp/source/: ExternalProtocol.pb.cc  InternalProtocol.pb.cc
protobuf/compiled/cs/: ActionModule.cs  CarAccessoryModule.cs  ExampleModule.cs  ExternalProtocol.cs  InternalProtocol.cs  MissionModule.cs
protobuf/compiled/go/: ExternalProtocol.pb.go  InternalProtocol.pb.go
protobuf/compiled/go/modules/: ActionModule.pb.go  CarAccessoryModule.pb.go  ExampleModule.pb.go  MissionModule.pb.go
protobuf/compiled/python/: ExternalProtocol_pb2.py  InternalProtocol_pb2.py  pyproject.toml
protobuf/compiled/python/fleet_protocol_protobuf_files/: ExternalProtocol_pb2.py  InternalProtocol_pb2.py
protobuf/compiled/python/modules/: ActionModule_pb2.py  CarAccessoryModule_pb2.py  ExampleModule_pb2.py  MissionModule_pb2.py
protobuf/definition/: ExternalProtocol.proto  InternalProtocol.proto
protobuf/definition/modules/: MissionModule.proto
protobuf/modules/: ActionModule.proto  AutonomyModule.proto  CarAccessoryModule.proto  ExampleModule.proto  MissionModule.proto
